# InstantSplat

./: .gitignore  .pixi.sh  Dockerfile  README.md  coarse_init_infer.py  docker-compose.yml  pyproject.toml  render_by_interp.py  train_joint.py
arguments/: __init__.py
instant_splat/: __init__.py  coarse_init_infer.py  logging_utils.py  train_joint.py
instant_splat/gaussian_renderer/: __init__.py
instant_splat/gradio_ui/: multi_img_ui.py
instant_splat/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
instant_splat/utils/: camera_utils.py  dust3r_utils.py  pose_utils.py
tools/: gradio_app.py  main.py  render.py  render_by_interp.py  train_joint.py  upload_to_hf.py
